<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.javacodegeeks</groupId>
  <artifactId>junitreportgeneration</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>JUnitReportGenerationExample</name>
  <description>How to generate Junit Reports</description>
  
  <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
        </dependency>
        <dependency>
          <groupId>org.apache.maven.surefire</groupId>
          <artifactId>surefire-junit47</artifactId>
          <version>3.0.0-M3</version>
        </dependency>
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-web-api</artifactId>
            <version>7.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.45</version>
      </dependency>
    </dependencies>

    <properties>
      <project>junitreportgeneration</project>
      <project.root>${basedir}</project.root>
          <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
          <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
          <maven.compiler.source>7</maven.compiler.source>

          <maven.compiler.target>7</maven.compiler.target>
      <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
      <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
      <sonar.jacoco.reportPath>${project.root}/target/jacoco.exec</sonar.jacoco.reportPath>
      <sonar.jacoco.itReportPath>${project.root}/target/jacoco-it.exec</sonar.jacoco.itReportPath>
      <sonar.language>java</sonar.language>
    </properties>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>3.0.0-M3</version>
                <configuration>
                  <forkCount>3</forkCount>
                  <reuseForks>true</reuseForks>
                  <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>
            <plugin>
              <groupId>org.jacoco</groupId>
              <artifactId>jacoco-maven-plugin</artifactId>
              <version>0.7.5.201505241946</version>
              <executions>
               <execution>
                <id>agent-for-ut</id>
                <goals>
                 <goal>prepare-agent</goal>
                </goals>
                <configuration>
                 <destFile>${sonar.jacoco.reportPath}</destFile>
                 <append>true</append>
                </configuration>
               </execution>
               <execution>
                <id>agent-for-it</id>
                <goals>
                 <goal>prepare-agent-integration</goal>
                </goals>
                <configuration>
                 <destFile>${sonar.jacoco.itReportPath}</destFile>
                 <append>true</append>
                </configuration>
               </execution>
               <execution>
               <id>default-report</id>
               <phase>prepare-package</phase>
               <goals>
                 <goal>report</goal>
               </goals>
               </execution>
              </executions>
            </plugin>
        </plugins>
    </reporting>
</project>
